# watch

./: #auto_saved_files#  Cargo.toml  LICENSE-APACHE  README.md  fp-info-cache  io.kicad_sch  io.kicad_sch-bak  mcu_mem.kicad_sch  usb_power.kicad_sch  usb_power.kicad_sch-bak  watch-pcb.kicad_pcb  watch-pcb.kicad_prl  watch-pcb.kicad_pro  watch-pcb.kicad_sch  watch-pcb.kicad_sch-bak
apps/app-template/: Cargo.toml
cad/watch_pcb/: fp-info-cache  watch_pcb.csv  watch_pcb.kicad_pcb  watch_pcb.kicad_prl  watch_pcb.kicad_pro  watch_pcb.kicad_sch  watch_pcb.kicad_sch-bak  watch_pcb.xml
code/src/drivers/: Cargo.toml
code/src/drivers/src/: display.rs  input.rs  lib.rs  tests.rs
code/src/drivers/src/display/: icna5300.rs
code/src/drivers/src/display/icna5300/: consts.rs
code/src/drivers/src/input/: button.rs  touch.rs
code/src/drivers/src/input/touch/: chsc6x.rs
code/src/drivers/src/input/touch/chsc6x/: chsc6x_comp.c  chsc6x_comp.h  platform.rs
code/src/embedded-kernel/: Cargo.toml
code/src/embedded-kernel/src/: allocator.rs  config.rs  kernel.rs  lib.rs  peripherals.rs
code/src/embedded-kernel/src/virtualization/: fs.rs  process_management.rs
code/src/embedded-kernel/src/virtualization/process_management/: mlfq.rs  process.rs
code/src/new-os/drivers/icna5300/: Cargo.toml
code/src/new-os/drivers/icna5300/src/: lib.rs
code/src/new-os/kernel-api/: Cargo.toml
code/src/new-os/kernel-api/src/: lib.rs  timer.rs
code/src/new-os/kernel-impl/: Cargo.toml
code/src/new-os/kernel-impl/src/: main.rs
code/src/new-os/os/: Cargo.toml
code/src/os/: Cargo.toml
code/src/os/.cargo/: config.toml
code/src/os/src/: main.rs
code/watchOS/: Cargo.toml
code/watchOS/src/: lib.rs
code/watchOS/src/drivers/device_drivers/: lcd.rs  led.rs
custom-lib/: custom-lib.bak  custom-lib.kicad_sym
custom-lib/custom-lib.pretty/: BGA-24_6.0x8.0mm_Layout5x5_P1.0mm.kicad_mod
daughter-board/daughter-board/: daughter-board.kicad_sch
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: config.rs  drivers.rs  lib.rs  peripherals.rs  virtualization.rs
kernel/src/drivers/: display.rs
kernel/src/drivers/display/: co5300.rs
kernel/src/drivers/display/co5300/: co5300.c
kernel/src/peripherals/: spi.rs
kernel/src/virtualization/: process_management.rs
os/: Cargo.toml
os.old/: Cargo.toml
os.old/src/: v1_os.rs
os.old/src/kernel/drivers/imu/: mpu6050.rs
os.old/src/kernel/drivers/input/chsc6x/: chsc6x_main.c  chsc6x_platform.c
os.old/src/os_programs/graphics/: display_manager.rs
os.old/src/util/: mod.rs
os/src/kernel/drivers/: sensor_data.rs
os/src/kernel/drivers/imu/lsm6dsv16x/: config.c
os/src/kernel/drivers/input/: chsc6x.rs
os/src/kernel/drivers/input/chsc6x/: chsc6x_comp.c  chsc6x_ramcode.h
os/src/util/: math.rs
pcb/: fp-info-cache  io.kicad_sch  mcu_mem.kicad_sch  mcu_mem.kicad_sch-bak  usb_power.kicad_sch  watch-pcb.kicad_pcb  watch-pcb.kicad_prl  watch-pcb.kicad_pro  watch-pcb.kicad_sch  watch-pcb.kicad_sch-bak
pcb/custom-lib/: custom-lib.kicad_sym
pcb/daughter-board/: daughter-board.kicad_sch
src/: apps.rs  kernel.rs  lib.rs  main.rs  os.rs  process_management.rs  tests.rs
src/apps/: sand.rs
src/apps/health_tracker/: sleep_tracker_daemon.rs
src/kernel/: drivers.rs  interfaces.rs  io.rs
src/kernel/drivers/: config.rs  display.rs  errors.rs  input.rs  misc.rs
src/kernel/drivers/imu/: lsm6dsv16x.rs
src/kernel/drivers/imu/lis3mdl/: config.c  consts.rs
src/kernel/drivers/imu/lsm6dsv16x/: config.rs
src/kernel/drivers/imu/mpu6050/: consts.rs
src/kernel/drivers/input/chsc6x/: chsc6x_comp.h  chsc6x_platform.h
src/kernel/interfaces/: i2c.rs
src/kernel/kernel_implementations/: mod.rs  test_bench_kernel.rs  v1_kernel.rs
src/os/: kernel.rs  mod.rs  os.rs  program_management.rs
src/os/apps/: daemon.rs  mod.rs
src/os/devices/: accelerometer.rs  button.rs  gps.rs  gyroscope.rs  imu.rs  magnetometer.rs  mod.rs  text_display.rs
src/os/drivers/: mod.rs  nine_dof_imu.rs  pcf8574t.rs
src/os/drivers/pcf8574t/: consts.rs
src/os/kernel/: drivers.rs  i2c.rs  interfaces.rs  kernel.rs  peripherals.rs
src/os/kernel/custom_kernels/: mod.rs  v1kernel.rs
src/os/kernel/drivers/: config.rs  display.rs  imu.rs  input.rs  misc.rs
src/os/kernel/drivers/display/: pcf8574t.rs
src/os/kernel/drivers/display/pcf8574t/: consts.rs
src/os/kernel/drivers/imu/: lis3mdl.rs
src/os/kernel/drivers/imu/lis3mdl/: config.rs  consts.rs
src/os/kernel/drivers/imu/mpu6050/: config.rs
src/os/kernel/drivers/input/chsc6x/: chsc6x_flash_boot.h
src/os/kernel/interfaces/: i2c.rs
src/os/kernel/peripherals/: i2c.rs  ledc.rs
src/os/program_management/health_tracker/: sleep_tracker_daemon.rs
src/util/: conversions.rs  mod.rs  units.rs
test/: Cargo.toml
watch-os/: Cargo.toml
watch-os/src/apps/: mod.rs
watch-os/src/apps/health_tracker/: mod.rs
watch-os/src/os/apps/: program.rs
watch-os/src/os/kernel/: kernel.rs  led.rs  mod.rs  spi.rs  system_singletons.rs
watch-os/src/util/: units.rs
watch-os/watch_pcb/: fp-info-cache  watch_pcb.kicad_prl
watch_pcb/: watch_pcb.kicad_prl  watch_pcb.kicad_sch  ~watch_pcb.kicad_pcb.lck  ~watch_pcb.kicad_sch.lck
watch_pcb/watch_pcb-backups/: watch_pcb.kicad_pcb
