[package]
name = "kernel"
version = "0.1.0"
authors = ["Desmond Mehta <desmondmehta@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
# allow no panic guarantees
no-panic = "0.1.3"
# necessary for graphics driver
embedded-graphics-core = "0.4"
# might make own but using this for now
linked_list_allocator = "0.10.5"
# units of mesaurement
uom = { version = "0.36.0", default-features = false, features = [
  "autoconvert", # automatic base unit conversion.
  "usize", "u8", "u16", "u32", "u64", "u128", # Unsigned integer storage types.
  "isize", "i8", "i16", "i32", "i64", "i128", # Signed integer storage types.
  "f32", "f64", # Floating point storage types.
  "si", # Built-in SI system support.
  "serde", # Serde support.
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
