[package]
name = "embedded-kernel"
version = "0.1.0"
authors = ["Desmond Mehta <desmondmehta@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
