[package]
authors = ["Desmond Mehta <desmondmehta@gmail.com>"]
name = "icna5300"
version = "0.1.0"
edition = "2021"

[dependencies.no-panic]
# allow no panic guarantees
version = "0.1.3"

[dependencies.embedded-graphics-core]
# necessary for graphics driver
version = "0.4"

[dependencies.embedded-hal]
# embedded hal api
version = "1.0.0"
features = ["defmt-03"]

[dependencies.embedded-hal-bus]
# embedded-hal bus traits
version = "0.2"
default-features = false
features = [
  "async",
  "defmt-03",
]

[dependencies.embedded-hal-async]
# embedded hal async stuff
version = "1.0.0" 
features = ["defmt-03"]

[dependencies.defmt]
# deferred formatting
version = "0.3.8"
features = ["alloc"]

[dependencies.thiserror-no-std]
# error handling
version = "2.0.2"

[dependencies.heapless]
# allow for heapless stuff
version = "0.8.0"

[dependencies.kernel-api]
# allows for kernel api stuff that may be necessary
path = "../../kernel-api"

[dependencies.fugit]
version = "0.3.7"
features = ["defmt"]
